# pytorch-exp

./: README.md  autoencoder.py  dataset-loading.ipynb  digits_dataset.py  mnist-transfer-autoencoder.ipynb  pyproject.toml  util.py
autoencoder-transfer-learning/: mnist-transfer-autoencoder.ipynb  trainer.py  util.py
