[tool.poetry]
name = "pytorch-exp"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
jupyterlab = "^3.5.0"
matplotlib = "^3.6.2"
scikit-learn = "^1.2.2"
torch = "^2.0.0"
torchvision = "^0.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
